--- a/ds1t-a/Luiz Gustavo/index.html
+++ b/ds1t-a/Luiz Gustavo/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/menu.css">
     <link rel="stylesheet" href="/css/inicio.css">
     <link rel="stylesheet" href="/css/iphone.css">
+    <link rel="stylesheet" href="/css/ipad.css">
     <title>One Page</title>
 </head>
 
@@ -85,7 +86,7 @@
                 <a href="https://www.apple.com/br/iphone-14-pro/" class="button-iphone">Clique Aqui</a>
             </div>
             <div class="main-right">
-                <h1 class="title-iphone">Iphone</h1>
+                <h1 class="title-iphone">IPhone</h1>
                 <p class="text-iphone">
                     iPhone é uma linha de smartphones desenvolvidos e comercializados pela Apple Inc. É o único smartphone a operar com o sistema operacional móvel iOS. A primeira geração do iPhone foi lançada em 29 de junho de 2007, desde então, a Apple lançou novos modelos
                     anualmente sendo o iPhone 14, iPhone 14 Plus, iPhone 14 Pro e iPhone 14 Pro Max os modelos mais recentes. A linha ‘14’ do iPhone foi anunciada em 7 de setembro de 2022 na conferência anual da Apple, transmitida na Apple Park, em Cupertino.
@@ -93,7 +94,22 @@
                 <img src="/img/IPHONE 14 PRO.png" alt="iphone14" class="iphone14">
             </div>
         </section>
-        <section class="section-ipad" id="ipad"></section>
+        <section class="section-ipad" id="ipad">
+            <h1 class="title-ipad">IPad</h1>
+            <div class="main-ipad">
+                <p class="text-ipad">
+                    A linha iPad Pro compreende os tablets estado-da-arte da Apple. Estes contam com telas de 11 e 12,9 polegadas, tecnologia True Tone e taxa de atualização de 120 Hz (que a Apple chama de ProMotion), o poderoso processador exclusivo Apple A12X Bionic, mais
+                    RAM (4 ou 6 GB), e um corpo com bordas finas e sem botão Home.
+                </p>
+                <img src="/img/ipad.png" alt="ipad" class="img-ipad">
+            </div>
+            <div class="ipad-pro">
+                <p class="text-ipad-button">
+                    IPad pro o mais potente e tecnologico atualmente veja:
+                </p>
+                <a href="https://www.apple.com/br/iphone-14-pro/" class="button-ipad">Clique Aqui</a>
+            </div>
+        </section>
         <section class="section-mac" id="mac"></section>
         <section class="section-airpods-watch" id="airpods-watch"></section>
         <section class="section-contato" id="contato"></section>
