Mobile em desenvolvimento

--- a/ds1t-b/André Luiz/index.html
+++ b/ds1t-b/André Luiz/index.html
@@ -1,55 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>One Page Samsung</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="./css/style.css">
-        <link rel="stylesheet" href="./css/reset.css">
-        <link rel="stylesheet" href="./css/logo.css">
-        <link rel="stylesheet" href="./css/menu.css">
-        <link rel="stylesheet" href="./css/home.css">
-    </head>
-    <body>
-        <header>
-            <div class="logo">
-                <a href="#">
-                    <img src="./img/logo.png" alt="Imagem de logo">
-                </a>
-            </div>
-            <nav>
-                <ul class="menu">
-                    <li>
-                        <a href="#">Sobre nós</a>
-                    </li>
-                    <li>
-                        <a href="#">Mobile</a>
-                    </li>
-                    <li>
-                        <a href="#">Tab</a>
-                    </li>
-                    <li>
-                        <a href="#">Smartwatch</a>
-                    </li>
-                    <li>
-                        <a href="#">Informações</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <section class="section-home">
-            <div class="promotion-text-container">
-                <span>Are you ready?</span>
-                <span>For revolution?</span>
-            </div>
-            <div class="promotion-image-container">
-                <img src="./img/fold-image.png" alt="Imagem promocional">
-            </div>
-        </section>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>One Page Samsung</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/logo.css">
+    <link rel="stylesheet" href="./css/menu.css">
+    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/mobile.css">
+</head>
+
+<body>
+    <header>
+        <div class="logo">
+            <a href="#">
+                <img src="./img/logo.png" alt="Imagem de logo">
+            </a>
+        </div>
+        <nav>
+            <ul class="menu">
+                <li>
+                    <a href="#">Sobre nós</a>
+                </li>
+                <li>
+                    <a href="#">Mobile</a>
+                </li>
+                <li>
+                    <a href="#">Tab</a>
+                </li>
+                <li>
+                    <a href="#">Smartwatch</a>
+                </li>
+                <li>
+                    <a href="#">Informações</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <section class="section-home">
+        <div class="promotion-text-container">
+            <span>Are you ready?</span>
+            <span>For revolution?</span>
+        </div>
+        <div class="promotion-image-container">
+            <img src="./img/fold-image.png" alt="Imagem promocional">
+        </div>
+    </section>
+    <section class="section-mobile">
+        <div class="title-mobile-container">
+                <h1 class="title-mobile">Mobile</h1>
+        </div>
+        <div class="promotion-container1">
+            <span>Galaxy Z Flip</span>
+            <img src="./img/Zflip-image.png" alt="Imagem promocional Zflip">
+            <a href="#">Comprar</a>
+        </div>
+        <div class="promotion-text-container">
+            <p class="promotion-text">Nossa linha de mobile de 
+                celulares com displays 
+                dobraveis são uma revolução</p>
+        </div>
+    </section>
+</body>
 
 </html>
