--- a/ds1t-b/one-page-nike/index.html
+++ b/ds1t-b/one-page-nike/index.html
@@ -17,7 +17,8 @@
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/black-friday.css">
     <link rel="stylesheet" href="./css/soccer.css">
-    <link rel="stylesheet" href="./css/contato.css">
+    <link rel="stylesheet" href="./css/basketball.css">
+    <link rel="stylesheet" href="./css/jordan.css">
     <link rel="stylesheet" href="./css/back.css">
     <title>One Page - Nike</title>
 </head>
@@ -143,13 +144,14 @@
                     <div class="circulo2"></div>
                 </a>
             </nav>
-
         </section>
 
         <section class="soccer" id="soccer">
             <div class="title-soccer">
                 <span>NIKE <span class="soccer-t">SOCCER</span> </span>
+                <p class="soccer-t2">Everything you need to own the pitch.</p>
             </div>
+
             <div class="img-container-soccer">
                 <a href="https://www.nike.com.br/camisa-nike-franca-i-202223-torcedor-pro-masculina-023156.html?cor=15#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
                     <img class="images-soccer" src="./img/soccer/produtos1/camiseta-franca.png" height="300px" width="300px" alt="camiseta-franca">
@@ -194,80 +196,133 @@
                     </div>
                 </a>
             </div>
-            <nav class="circulos-interacao-soccer">
+            <nav class="circulos-interacao">
                 <a href="#">
-                    <div class="circulo1-soccer"></div>
+                    <div class="circulo1"></div>
                 </a>
                 <a href="#">
-                    <div class="circulo2-soccer"></div>
+                    <div class="circulo2"></div>
                 </a>
             </nav>
         </section>
 
-        <section class="contato" id="contato">
-            <h2 class="section-title">Contato</h2>
-            <ul class="contato-container">
-                <li>
-                    <h3 class="contato-title">Contato</h3>
-                </li>
-                <li>
-                    <div class="contato-item">
-                        <i class="fas fa-phone"></i>
-                        <span>(11) 4774-4700</span>
+        <section class="basketball" id="basketball">
+            <div class="title-basketball">
+                <span>NIKE <span class="basketball-t">BASKETBALL</span> </span>
+                <p class="basketball-t2">We play with our heads, and when we need to, with our hearts.</p>
+            </div>
+            <div class="img-container-basketball">
+                <a href="https://www.nike.com.br/regata-nike-kevin-durant-nets-statement-edition-2020-masculina-011023.html?cor=7U" target="blank" class="img">
+                    <img class="images" src="./img/basketball/produtos1/brooklyn-nets-durant.png" height="200px" width="200px" alt="nike-brooklyn-nets">
+                    <div class="description">
+                        <p class="description-title">Regata Nike Kevin Durant Nets Statement Edition 2020 Masculina</p>
+                        <p class="description-basketball-price">R$ 369,99</p>
                     </div>
-                </li>
-                <li>
-                    <div class="contato-item">
-                        <i class="fas fa-envelope"></i>
-                        <span>mts02501@gmail.com</span>
+                </a>
+                <a href="https://www.nike.com.br/camiseta-nike-x-space-jam-lebron-james-masculina-013749.html?cor=51" target="blank" class="img">
+                    <img class="images" src="./img/basketball/produtos1/nike-space-jam-lebron.png" height="200px" width="200px" alt="camiseta-space-jam">
+                    <div class="description">
+                        <p class="description-title">Camiseta Nike x Space Jam Lebron James Masculina</p>
+                        <p class="description-basketball-price">R$ 119,99</p>
                     </div>
-                </li>
-                <li>
-                    <div class="contato-item">
-                        <i class="fab fa-whatsapp"></i>
-                        <span>(11) 94490-1479</span>
+                </a>
+                <a href="https://www.nike.com.br/camiseta-nike-just-do-it-masculina-019979.html?cor=ID" target="blank" class="img">
+                    <img class="images" src="./img/basketball/produtos1/nike-just-do-it.png" height="200px" width="200px" alt="camiseta-just-do-it">
+                    <div class="description">
+                        <p class="description-title">Camiseta Nike "Just Do It" Masculina</p>
+                        <p class="description-basketball-price">R$ 179,99</p>
                     </div>
-                </li>
-            </ul>
-            <ul class="social-container">
-                <li>
-                    <a href="https://instagram.com/math_alves099" class="social-item" target="_blank">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://github.com/MatheusAlves099" class="social-item" target="_blank">
-                        <i class="fab fa-github-alt"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.linkedin.com/in/matheusalvesreisdasilva/" class="social-item" target="_blank">
-                        <i class="fab fa-linkedin"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.figma.com/files/user/830208557143248439?fuid=830208557143248439" class="social-item" target="_blank">
-                        <i class="fa-brands fa-figma"></i>
-                    </a>
-                </li>
-            </ul>
-            <ul class="link-container">
-                <li>
-                    <h3 class="link-title">Links</h3>
-                </li>
-                <li>
-                    <a href="#home">Início</a>
-                </li>
-                <li>
-                    <a href="#sobre-mim">Sobre Mim</a>
-                </li>
-                <li>
-                    <a href="#projetos">Projetos</a>
-                </li>
-                <li>
-                    <a href="#contato">Contato</a>
-                </li>
-            </ul>
+                </a>
+                <a href="https://www.nike.com.br/camiseta-nike-masculina-022049.html?cor=51" target="blank" class="img">
+                    <img class="images" src="./img/basketball/produtos1/nike-white.png" height="200px" width="200px" alt="camiseta-white">
+                    <div class="description">
+                        <p class="description-title">Camiseta Nike Masculina</p>
+                        <p class="description-basketball-price">R$ 149,99</p>
+                    </div>
+                </a>
+                <a href="https://www.nike.com.br/regata-nike-giannis-antetokounmpo-bucks-icon-edition-2020-masculina-011189.html?cor=NX" target="blank" class="img">
+                    <img class="images" src="./img/basketball/produtos1/nike-bucks.png" height="200px" width="200px" alt="camiseta-bucks">
+                    <div class="description">
+                        <p class="description-title">Regata Nike Giannis Antetokounmpo Bucks Icon Edition 2020 Masculina</p>
+                        <p class="description-basketball-price">R$ 379,99</p>
+                    </div>
+                </a>
+                <a href="https://www.nike.com.br/camiseta-nike-los-angeles-lakers-statement-edition-masculina-023835.html?cor=ID" target="blank" class="img">
+                    <img class="images"src="./img/basketball/produtos1/nike-lakers-statement.png" height="200px" width="200px" alt="nike-lakers-statement">
+                    <div class="description">
+                        <p class="description-title">Camiseta Nike Los Angeles Lakers Statement Edition Masculina</p>
+                        <p class="description-basketball-price">R$ 599,99</p>
+                    </div>
+                </a>
+            </div>
+            <nav class="circulos-interacao-basketball">
+                <a href="#">
+                    <div class="circulo1"></div>
+                </a>
+                <a href="#">
+                    <div class="circulo2"></div>
+                </a>
+            </nav>
+        </section>
+
+        <section class="jordan" id="jordan">
+            <div class="title-soccer">
+                <span>NIKE <span class="soccer-t">SOCCER</span> </span>
+                <p class="soccer-t2">Everything you need to own the pitch.</p>
+            </div>
+
+            <div class="img-container-soccer">
+                <a href="https://www.nike.com.br/camisa-nike-franca-i-202223-torcedor-pro-masculina-023156.html?cor=15#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
+                    <img class="images-soccer" src="./img/soccer/produtos1/camiseta-franca.png" height="300px" width="300px" alt="camiseta-franca">
+                    <div class="description-soccer">
+                        <p class="description-soccer-title">Camisa Nike França I 2022/23 Torcedor Pro Masculina</p>
+                        <p class="description-soccer-price">R$ 399,99</p>
+                    </div>
+                </a>
+                <a href="https://www.nike.com.br/camisa-nike-inglaterra-ii-202223-torcedor-pro-masculina-023143.html?cor=P1#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
+                    <img class="images-soccer" src="./img/soccer/produtos1/camiseta-inglaterra.png" height="300px" width="300px" alt="camiseta-inglaterra">
+                    <div class="description-soccer">
+                        <p class="description-soccer-title">Camisa Nike Inglaterra II 2022/23 Torcedor Pro Masculina</p>
+                        <p class="description-soccer-price">R$ 399,99</p>
+                    </div>
+                </a>
+                <a href="https://www.nike.com.br/camisa-nike-holanda-i-202223-torcedor-pro-masculina-023138.html?cor=A1#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
+                    <img class="images-soccer" src="./img/soccer/produtos1/camiseta-holanda.png" height="300px" width="300px" alt="camiseta-holanda">
+                    <div class="description-soccer">
+                        <p class="description-soccer-title">Camisa Nike Holanda I 2022/23 Torcedor Pro Masculina</p>
+                        <p class="description-soccer-price">R$ 399,99</p>
+                    </div>
+                </a>
+                <a href="https://www.nike.com.br/chuteira-nike-zoom-vapor-15-academy-infantil-futsal-024078.html?cor=ID#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
+                    <img class="images-soccer" src="./img/soccer/produtos1/chuteira-vapor15.png" height="300px" width="300px" alt="chuteira-vapor15">
+                    <div class="description-soccer">
+                        <p class="description-soccer-title">Chuteira Nike Zoom Vapor 15 Academy Infantil Futsal</p>
+                        <p class="description-soccer-price">R$ 499,99</p>
+                    </div>
+                </a>
+                <a href="https://www.nike.com.br/chuteira-nike-zoom-mercurial-superfly-9-academy-cr7-infantil-futsal-024404.html?cor=51#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
+                    <img class="images-soccer" src="./img/soccer/produtos1/chuteira-superfly9.png" height="300px" width="300px" alt="chuteira-superfly9">
+                    <div class="description-soccer">
+                        <p class="description-soccer-title">Chuteira Nike Zoom Mercurial Superfly 9 Academy CR7 Infantil Futsal</p>
+                        <p class="description-soccer-price">R$ 549,99</p>
+                    </div>
+                </a>
+                <a href="https://www.nike.com.br/bola-nike-strike-3rd-013865.html?cor=52#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
+                    <img class="images-soccer" src="./img/soccer/produtos1/bola-premier.png" height="300px" width="300px" alt="bola-premier">
+                    <div class="description-soccer">
+                        <p class="description-soccer-title">Bola Nike Premier League Strike Third</p>
+                        <p class="description-soccer-price">R$ 139,99</p>
+                    </div>
+                </a>
+            </div>
+            <nav class="circulos-interacao">
+                <a href="#">
+                    <div class="circulo1"></div>
+                </a>
+                <a href="#">
+                    <div class="circulo2"></div>
+                </a>
+            </nav>
         </section>
     </main>
 
