--- a/ds1m-b/paula-blesa/index.html
+++ b/ds1m-b/paula-blesa/index.html
@@ -103,7 +103,7 @@
                 <h2 class="title-raça"> RAÇAS</h2>
                 <img src="./img/icon2.png" alt="" class="icon2">
             </div>
-            <span></span>
+            <span class="border-2"></span>
         </section>
         <section></section>
         <section></section>
