Correção do Home e finalização do Mobile

--- a/ds1t-b/André Luiz/index.html
+++ b/ds1t-b/André Luiz/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./css/menu.css">
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/mobile.css">
+    <link rel="stylesheet" href="./css/tab.css">
 </head>
 
 <body>
@@ -62,14 +63,24 @@
         <div class="promotion-container1">
             <span>Galaxy Z Flip</span>
             <img src="./img/Zflip-image.png" alt="Imagem promocional Zflip">
-            <a href="#">Comprar</a>
+            <a href="#" class="button-promotion-comprar">Comprar</a>
         </div>
-        <div class="promotion-text-container">
+        <div class="promotion-text-container-mobile">
             <p class="promotion-text">Nossa linha de mobile de 
                 celulares com displays 
                 dobraveis são uma revolução</p>
         </div>
+        <div class="promotion-container2">
+            <span>Galaxy Fold</span>
+            <img src="./img/fold-image-promotional.png" alt="Imagem promocional Zflip">
+            <a href="#" class="button-promotion-comprar">Comprar</a>
+        </div>
+    </section>
+    <section class="section-tab">
+        <div class="title-tab-container">
+            <h1 class="title-tab">Tab</h1>
+        </div>
+        
     </section>
 </body>
-
 </html>
