Section Tab feita

--- a/ds1t-b/André Luiz/index.html
+++ b/ds1t-b/André Luiz/index.html
@@ -80,7 +80,18 @@
         <div class="title-tab-container">
             <h1 class="title-tab">Tab</h1>
         </div>
-        
+        <div class="tab-text-container">
+            <p class="tab-text">
+                Com o Tab a sua experiência como usuário pode ser melhorada!
+            </p>
+            <p class="tab-text">                
+                As suas áreas de trabalho nunca estiveram mais organizadas.
+            </p>
+        </div>
+        <div class="tab-promotion-container">
+            <img src="./img/tab-image.png" alt="Imagem promocial tab">
+            <a href="#" class="button-promotion-comprar">Comprar</a>
+        </div>
     </section>
 </body>
 </html>
