sessão filmes concluída

--- a/ds1m-b/one-page-leticia/index.html
+++ b/ds1m-b/one-page-leticia/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/sobre.css">
     <link rel="stylesheet" href="./css/section-title">
     <link rel="stylesheet" href="./css/fundadores.css">
+    <link rel="stylesheet" href="./css/filmes.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;800;900&display=swap" rel="stylesheet"> 
@@ -106,13 +107,30 @@
             O studio possui cerca de 24 filmes, curtas- metragens, comercias, documentários<br/>
             entre outras atrações!  Esses são os meus favoritos do momento:
         </p>
-        <div class="card-container"></div>
-        <img src="./img/kiki.png" alt="">
-        <img src="./img/sussuros-coracao.png" alt="">
-        <img src="./img/castelo-animado.png" alt="">
-        <img src="./img/marnie.png" alt="">
-        <img src="./img/chihiro.png" alt="">
-        <img src="./img/ponyo.png" alt="">
+        <div class="card-container">
+            <a href="https://www.netflix.com/br/title/60027106" target="_blank" class="card">
+                <img src="./img/filme-kiki.png" alt="">
+            </a>
+
+        <a href="https://www.netflix.com/br/title/70045021" target="_blank" class="card">
+            <img src="./img/sussuros-coracao.png" alt="">
+        </a>
+
+        <a href="https://www.netflix.com/br/title/70028883" target="_blank" class="card">
+            <img src="./img/castelo-animado.png" alt="">
+        </a>
+        <a href="https://www.netflix.com/br/title/80036398" target="_blank" class="card">
+            <img src="./img/marnie.png" alt="">
+        </a>
+        
+        <a href="https://www.netflix.com/br/title/60023642" target="_blank" class="card">
+            <img src="./img/chihiro.png" alt="">
+        </a>
+        
+        <a href="https://www.netflix.com/br/title/70106454" target="_blank" class="card">
+            <img src="./img/ponyo.png" alt="">
+        </a>
+        </div> 
     </section>
 </main>
 
