alguns ajustes sobre e inicio do novidades

--- a/ds1m-b/Eduardo Ribeiro Pimenta/index.html
+++ b/ds1m-b/Eduardo Ribeiro Pimenta/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/section-title.css">
     <link rel="stylesheet" href="./css/sobre.css">
+    <link rel="stylesheet" href="./css/novidades.css">
+    <link rel="stylesheet" href="./css/banner.css">
     <title>among us</title>
 </head>
 <body>
@@ -40,7 +42,15 @@
             <span class="impostor">impostor</span>, que tem como objetivo eliminar os outros jogadores sem ser descobrerto.</p>
             <img src="./img/tablet.png" alt="tablet amongus">
         </section>
-        <section class="novidades" id="novidades"></section>
+        <section class="novidades" id="novidades">
+            <h2 class="section-title">Novidades</h2>
+            <ul class="news">
+                <li class="banner">
+                    <img src="./img/molde.png" alt="">
+                    <span>NOVO MAPA!!!</span>
+                </li>
+            </ul>
+        </section>
         <section class="download" id="download"></section>
     </main>
     <footer>footer</footer>
