--- a/ds1t-a/marceloGabriel-riotGames/index.html
+++ b/ds1t-a/marceloGabriel-riotGames/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/main-home.css">
     <title>RiotGames - Início</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
         <div class="cabecalho-home-um">
             <img src="./img/Logo Riot Games.png" alt="Logo da Riot Games do Header">
         </div>
-        <div>
+        <div class="lista-cabecalho-home">
             <a href="#">Home</a>
             <a href="#">Jogos</a>
             <a href="#">E-Sports</a>
@@ -20,7 +21,7 @@
         </div>
     </Header>
     <Main>
-
+        
     </Main>
 </body>
 </html>
