--- a/ds1m-b/paula-blesa/index.html
+++ b/ds1m-b/paula-blesa/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/sobre.css">
     <link rel="stylesheet" href="./css/image.css">
     <link rel="stylesheet" href="./css/raças.css">
+    <link rel="stylesheet" href="./css/curiosidades.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Updock&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -104,8 +105,66 @@
                 <img src="./img/icon2.png" alt="" class="icon2">
             </div>
             <span class="border-2"></span>
+            <div class="img-raças">
+                <div class="maine">
+                    <a href="https://petlove.com.br/maine-coon/r" class="card">
+                        <img src="./img/maine.png" alt="">
+                    </a>
+
+                </div>
+                <div class="siames">
+                    <a href="https://www.petlove.com.br/siames/r" class="card">
+                        <img src="./img/siames.png" alt="">
+                    </a>
+                </div>
+                <div class="exotico">
+                    <a href="https://www.petz.com.br/gato/racas/exotico/" class="card">
+                        <img src="./img/exotico.png" alt="">
+                    </a>
+                </div>
+            </div>
+            <div class="names">
+                <p> Maine Coon </p>
+                <P>Siamês </P>
+                <P>Exótico</P>
+
+            </div>
+            <div class="img-raça">
+                <div class="angora">
+                    <a href="https://www.petz.com.br/gato/racas/angora/" class="card">
+                        <img src="./img/angora.png" alt="">
+                    </a>
+
+                </div>
+                <div class="persa">
+                    <a href="https://www.petlove.com.br/persa/r" class="card">
+                        <img src="./img/persa.png" alt="">
+                    </a>
+                </div>
+                <div class="spinks ">
+                    <a href="https://www.petlove.com.br/sphynx/r" class="card">
+                        <img src="./img/spinks 1.png " alt=" ">
+                    </a>
+                </div>
+            </div>
+            <div class="name">
+                <p> Angorá </p>
+                <P>Persa </P>
+                <P>Spynks</P>
+            </div>
+
+            <ul class="outros">
+                <li>
+                    <a href="https://www.peritoanimal.com.br/racas-de-gatos.html">Outros</a>
+                </li>
+            </ul>
         </section>
-        <section></section>
+        <section class="Curiosidades" id="Curiosidades">
+            <div class="curiosidade-icon">
+                <h2 class="title-curiosidade"> CURIOSIDADES</h2>
+                <img src="./img/CURIO.png" alt="" class="icon3">
+            </div>
+        </section>
         <section></section>
         <section></section>
     </main>
