--- a/ds1t-b/Projeto FF/index.html
+++ b/ds1t-b/Projeto FF/index.html
@@ -18,6 +18,9 @@
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="historia.css">
     <link rel="stylesheet" href="back.css">
+    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="personagens.css">
+    
     <title>Final Fantasy VII</title>
 </head>
 
@@ -51,7 +54,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="botao" href="contatos">
+                        <a class="botao" href="#contatos">
                             <p class="texto-botao">Contatos</p>
                         </a>
                     </li>
@@ -85,7 +88,9 @@
         <section class="criadores" id="criadores"></section>
         <section class="contatos" id="contatos"></section>
     </main>
-    <footer></footer>
+    <footer>
+        Todos os direitos reservados 2022 | Desenvolvido por Mateus Alves
+    </footer>
 </body>
 
 </html>
