--- a/ds1t-b/Projeto FF/index.html
+++ b/ds1t-b/Projeto FF/index.html
@@ -20,7 +20,9 @@
     <link rel="stylesheet" href="back.css">
     <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="personagens.css">
-    
+    <link rel="stylesheet" href="producao.css">
+    <link rel="stylesheet" href="criadores.css">
+    <link rel="stylesheet" href="contatos.css">
     <title>Final Fantasy VII</title>
 </head>
 
@@ -86,7 +88,25 @@
         <section class="personagens" id="personagens"></section>
         <section class="producao" id="producao"></section>
         <section class="criadores" id="criadores"></section>
-        <section class="contatos" id="contatos"></section>
+        <section class="contatos" id="contatos">
+            <p class="titulo-contatos">Contatos</p>
+            <container class="informacoes">
+                <div class="texto-informacoes">
+                    <li class="info-item">
+                        <div>
+                            <i class="fas fa-envelope" aria-hidden="true"></i>
+                            <span>mateusalves5942@gmail.com</span>
+                        </div>
+                    </li>
+                    <li class="info-item"></li>
+                    <li class="info-item"></li>
+                    <li class="info-item"></li>
+                </div>
+                <div class="imagem-contatos">
+                    <img src="./img/Imagem ff 1.png" alt="imagem-contato">
+            </container>
+            </div>
+        </section>
     </main>
     <footer>
         Todos os direitos reservados 2022 | Desenvolvido por Mateus Alves
