--- a/ds1m-b/lucasvinicius/index.html
+++ b/ds1m-b/lucasvinicius/index.html
@@ -3,19 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com"
+    >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin
+    >
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet"
+    >
+    <script src="https://kit.fontawesome.com/4ea9540e8d.js" crossorigin="anonymous">
+    </script>
+
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/logos.css">
+    <link rel="stylesheet" href="./css/menu.css">
+    <link rel="stylesheet" href="./css/seta.css">
+    <link rel="stylesheet" href="./css/home.css">
     <title>Call of Duty: Black Ops</title>
 </head>
 <body>
     <header>
+        <nav>
+            <ul class="menu">
+                <li>
+                    <a href="Games">GAMES</a>
+                    <a href="seta" class="seta">
+                        <i class="fas fa-caret-down"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="Download">DOWNLOAD</a>
+                    <a href="seta" class="seta">
+                        <i class="fas fa-caret-down"></i>
+                    </a>
+                </li>
+            </ul>
+        </nav>
         <div>
-            <img src="./img/Vector.png" alt="logoCallOfDuty" class="logoCallOfDuty">
+            <img src="./img/Vector.png" alt="logoCallOfDuty" class="logoPrimeira">
         </div>
     </header>
     <main>
-        <section class="home" id="home"></section>
+        <section class="home" id="home">
+            <div>
+                <img src="./img/gifHome.gif" alt="gifHome" class="gifHome">
+            </div>
+            <div>
+                <img src="./img/Rectangle 1.png" alt="patenteimg" class="patenteimg">
+            </div>
+        </section>
         <section class="bo1" id="bo1" ></section>
         <section class="bo2" id="bo2"></section>
         <section class="bo3" id="bo3"></section>
