--- a/ds1m-a/cleiton/index.html
+++ b/ds1m-a/cleiton/index.html
@@ -11,9 +11,8 @@
     <link rel="stylesheet" href="./css/info.css">
     <link rel="stylesheet" href="./css/personagens.css">
     <link rel="stylesheet" href="./font/berserker-regular-font/Berserker-Regular.ttf">
-    <script src="https://kit.fontawesome.com/78c0e1b8e9.js" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
-
+    <script src="https://kit.fontawesome.com/78c0e1b8e9.js" crossorigin="anonymous"></script>
     <title>God of War</title>
 </head>
 
@@ -23,19 +22,19 @@
         <nav>
             <ul class="menu">
                 <li>
-                    <a href="#home">Home</a>
+                    <a href="#home"><span class = "omega">Ω</span>  Home</a>
 
                 </li>
                 <li>
-                    <a href="#info">Info</a>
+                    <a href="#info"><span class = "omega">Ω</span>Info</a>
 
                 </li>
                 <li>
-                    <a href="#personagens">Personagens</a>
+                    <a href="#personagens"><span class = "omega">Ω</span>Personagens</a>
 
                 </li>
                 <li>
-                    <a href="#compre">Compre</a>
+                    <a href="#compre"><span class = "omega">Ω</span>Compre</a>
 
                 </li>
 
@@ -72,6 +71,25 @@
                                 <span onclick="mudarEstado('atreus')">Atreus</span>
                             </li>
                     </div>
+                    <ul id="kratos">
+                        <li>
+                            <img src="./img/kratos.png" alt="">
+                            <span> O deus da guerra espartano construiu uma nova vida em Midgard. 
+                                A paternidade deu a Kratos um novo propósito. Com o Ragnarök se aproximando, os riscos nunca foram tão altos. Kratos deve se decidir entre proteger
+                                o filho e a vida que construíram juntos ou defender os Nove Reinos da guerra catastrófica.
+                                </span>
+                        </li>
+                    </ul>
+                    <ul id="atreus">
+                        <li>
+                            <img src="./img/atreus.png" alt="">
+                            <span> Atreus é um semideus adolescente, filho de Kratos e da Giganta Laufey. 
+                                Os Gigantes e os Aesir o conhecem como "Loki". 
+                                Com a iminência do Ragnarök, Atreus quer a todo custo explorar e compreender melhor a própria identidade para encontrar seu lugar no mundo. 
+                                Ele treinou muito com o pai e, embora o relacionamento entre os dois permaneça firme, Atreus anseia por começar a seguir o seu próprio caminho.
+                                </span>
+                        </li>
+                    </ul>
                     <div class="personagens_lista_secundarios">
                         <li class="personagens_card">
                             <img src="./img/thor.png" alt="">
@@ -98,12 +116,7 @@
                             <span onclick="mudarEstado('mimir')">Mimir</span>
                         </li>
                     </div>
-                    <ul id="kratos">
-                        <li>
-                            O deus da guerra espartano construiu uma nova vida em Midgard. A paternidade deu a Kratos um novo propósito. Com o Ragnarök se aproximando, os riscos nunca foram tão altos. Kratos deve se decidir entre proteger o filho e a vida que construíram juntos
-                            ou defender os Nove Reinos da guerra catastrófica.
-                        </li>
-                        </li>
+
 
         </section>
         <section class="compre" id="compre"></section>
